fixed sidebar element text being cut off

--- a/client/src/css/sidebarElement.scss
+++ b/client/src/css/sidebarElement.scss
@@ -5,7 +5,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 10px 12px 10px 34px;
+  padding: 5px 12px 5px 34px;
   gap: 34px;
 
   position: relative;
@@ -15,7 +15,7 @@
 }
 
 .sidebarElement-indented {
-  padding: 10px 12px 10px 60px !important;
+  padding: 5px 12px 5px 60px !important;
 }
 
 .sidebarElement-selected {
